# saiki

./: .env.example  .gitignore  AI-README.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Coding-agent-spec.md  Dockerfile  PLUGIN-TESTING-QUICKSTART.md  README-task-master.md  README.Docker.md  README.md  README.saiki.md  ROADMAP.md  SAIKI-PLAN.md  VERSIONING.md  compose.yaml  eslint.config.js  mcp-registry.json  package-lock.json  package.json  test-claude-workflow.md  test-config.yml  test-plugin-system.js  test-plugins.yml  tsconfig.json  tsconfig.typecheck.json  tsup.config.ts  vitest.config.ts  vitest.integration.config.ts
agents/: README.md  agent-registry.json  agent-template.yml  agent.yml
agents/image-editor-agent/python-server/: README.md  main.py  pyproject.toml
agents/music-agent/python-server/: main.py  pyproject.toml  test_functions.py
app/: cli-subscriber.ts  cli.ts  index.ts
configuration/: README.md  mcp.json  multi-server-example.json  saiki.yml
docs/: VERSIONING.md  api-sidebars.ts  api_and_websockets.md  architecture.md  building-with-saiki.md  docusaurus.config.ts  how-to-dexto.md  how-to-saiki.md  index.html  llm-providers.md  package-lock.json  package.json  sidebars.ts
docs-site/: docusaurus.config.ts  package-lock.json
examples/: agent-with-plugins.yml  file-context-example.yml  scheduled-agent-example.ts
feature-plans/: compression-beta.md  compression.md  event-mechanism.md  extensible-system-context.md  improve-system-prompt.md  json-to-yaml.md  message-management.md  tokenizer.md  web-app.md
lib/: expressRedactionMiddleware.ts  redactor.ts
plugins/: README.md  TESTING.md  audit-logger-improved.js  audit-logger.js  audit-logger.ts  example-typescript-plugin.ts  tool-filter-improved.js  tool-filter.js  tool-filter.ts
postman/: README.md  dexto-webhooks.postman_collection.json  (+1 more)
scripts/: README.md  (+6 more)
src/: ai.ts  (+6 more)
(+909 files in other folders)
