[project]
name = "music-creator-mcp"
version = "1.0.0"
description = "MCP server for music creation, editing, and audio processing using librosa, pydub, and music21"
authors = [
    {name = "Saiki Team", email = "team@saiki.ai"}
]
requires-python = ">=3.10"
dependencies = [
    "librosa>=0.10.0",
    "pydub>=0.25.1",
    "music21>=8.1.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "soundfile>=0.12.1",
    "pydantic>=2.0.0",
    "mcp>=1.0.0",
    "pretty_midi>=0.2.9",
    "pygame>=2.5.0",
    "audioread>=3.0.0",
    "resampy>=0.4.2",
    "scikit-learn>=1.3.0",
    "setuptools>=80.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "jupyter>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.hatch.build.targets.wheel]
packages = ["."] 
